K8s/K8s.Helm/local/Kubernetes/ingress-controller/nginx/customers-ingress/s2search-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s2searchui-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - s2search.co.uk # Your original hostname(s)
        - demo.s2search.co.uk # New subdomain
        - annalisaoliver.s2search.co.uk # New subdomain
        - admin.s2search.co.uk # New subdomain
      secretName: s2search-ssl-cert # Use the name of the secret you created
  rules:
    ########################
    # S2 Search Sub Domains
    ########################

    - host: s2search.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s2searchui-clusterip
                port:
                  number: 3000
    - host: demo.s2search.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s2searchui-clusterip
                port:
                  number: 3000
    - host: annalisaoliver.s2search.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s2searchui-clusterip
                port:
                  number: 3000

    ########################
    # S2 Search Admin UI
    ########################
    - host: admin.s2search.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s2adminui-api-service
                port:
                  number: 3001
